<?xml version="1.0"?>
<package format="2">
  <name>robot4ws_teleop_keyboard</name>
  <version>1.1.0</version>
  <description>This is an example of a ROS based application. It implements a custom tele-operation node for controlling mobile robots</description>
  <maintainer email="matteo.caruso@phd.units.it">Matteo Caruso</maintainer>
  <author email="matteo.caruso@phd.units.it">Matteo Caruso</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
